[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/geometry/floor tile.png" type="Texture" id=1]
[ext_resource path="res://scripts/geometry/RoomFloor.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 1, 0.1, 1 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=2]

[node name="RoomBase" type="StaticBody"]
script = ExtResource( 2 )

[node name="FloorCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="FloorMesh" type="MeshInstance" parent="FloorCollision"]
material_override = SubResource( 1 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = null

[node name="TestTween" type="Tween" parent="."]

[node name="EdgeTween" type="Tween" parent="."]

[connection signal="tween_completed" from="TestTween" to="." method="show_edges"]
